# VIATRA-Generator

./: .editorconfig  .gitattributes  .gitignore  .project  README.md  build.gradle  gradle.properties  settings.gradle
Application/hu.bme.mit.inf.dslreasoner.application/: .project  Eclipse Application.launch  plugin.xml  plugin.xml_gen  start-application-umontreal.launch  start-application.launch  start-standalone.launch
Application/hu.bme.mit.inf.dslreasoner.application.ide/: .gitignore  .project
Application/hu.bme.mit.inf.dslreasoner.application.ui/: .gitignore  .project  plugin.xml  plugin.xml_gen
Application/org.eclipse.viatra.solver.language.ide/: .project
Application/org.eclipse.viatra.solver.language.model/: .project  plugin.properties  plugin.xml
Domains/: .project
Solvers/ILP-Solver/hu.bme.mit.inf.dslreasoner.ilp.cbc/cpp/: CMakeLists.txt  viatracbc.cpp  viatracbc.hpp
gradle/: java-common.gradle  jmh.gradle  junit.gradle  mwe2.gradle  source-layout.gradle  xtend.gradle  xtext-common.gradle
language/: .classpath  .project  build.gradle
language-ide/: .classpath  .project  build.gradle
language-model/: .classpath  .project  build.gradle  build.properties  problem.aird
language-mwe2/: build.gradle
language-web/: .classpath  .editorconfig  .eslintrc.js  .project  .stylelintrc.js  build.gradle  package-lock.json  package.json  tsconfig.json  webpack.config.js
model-data/: build.gradle
model-query/: build.gradle
org.eclipse.viatra.coding/: build.gradle
org.eclipse.viatra.solver.language.parent/: .project  build.gradle  settings.gradle
(+12570 files in other folders)
